# az-hp

./: .gitignore  AGENTS.md  Makefile  README.md  STATUS.md  pyproject.toml
.loom/compound/: INSTINCTS.md  instincts.json
.loom/memory/: meta.json
.loom/memory/notes/: 20260220005033-pmtiles-for-hunt-units-and-land-ownership-were-converted-from-geojson-to-pm-231266ce.md  20260220032735-az-hunt-map-now-uses-world-class-architecture-all-data-as-pmtiles-on-demand-3688199a.md  20260220225841-pipeline-optimized-removed-unused-overture-downloads-water-landcover-buildi-e21313a5.md  20260223000503-padus-land-ownership-ea24321f.md  20260223000503-terrain-implementation-ab7ea0ab.md  20260223004448-blm-sma-geometry-conversion-f830684c.md
.loom/pack/: lock.json
.loom/ticket/: ah-04fc.md  ah-1494.md  ah-1557.md  ah-4a8b.md  ah-58db.md  ah-6760.md  ah-6781.md  ah-6cab.md  ah-7243.md  ah-850a.md  ah-a536.md  ah-ad64.md  ah-cc7e.md  ah-ce83.md  ah-d095.md  ah-d2c5.md  ah-d2e1.md  ah-dbe7.md  ah-ed69.md  config.yaml
.loom/ticket/.audit/: audit-2026-02-17.jsonl  audit-2026-02-18.jsonl  audit-2026-02-19.jsonl  audit-2026-02-20.jsonl  audit-2026-02-22.jsonl  audit-2026-02-23.jsonl  audit-2026-02-24.jsonl  audit-2026-03-03.jsonl
.loom/ticket/closed/: ah-0094.md  ah-04fc.md  ah-143f.md  ah-1494.md  ah-1557.md  ah-163b.md  ah-174b.md  (+36 more)
.opencode/compound/: autolearn_status.json
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
pipeline/: 01_download.py  02_clip_arizona.py  03_enrich.py  04_generate_tiles.sh  utils.py
(+254 files in other folders)
