[project]
name = "az-hp"
version = "0.1.0"
description = "Arizona Public Land Hunting Access Planner"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.2.0",
    "geopandas>=1.0.0",
    "shapely>=2.0.0",
    "pyarrow>=19.0.0",
    "httpx>=0.28.0",
]

[project.scripts]
az-hp = "az_hp:main"
